fix toc entry letter spacing when active

--- a/assets/css/article-card.css
+++ b/assets/css/article-card.css
@@ -47,15 +47,6 @@
     padding-bottom: 25px; 
 }
 
-/* fade in cards after they are loaded with the 'load more' button */
-.article-card {
-    opacity: 1;
-    transition: opacity 0.5s ease-in-out;
-}
-.article-card.fade-in {
-    opacity: 0;
-}
-
 @media (min-width: 768px) {
     .main-article .article-card {
         display: grid;
